--- a/.vuepress/public/assets/css/global.css
+++ b/.vuepress/public/assets/css/global.css
@@ -4,5 +4,22 @@
 }
 
 body {
-    font-family: HackRegular;
+    font-family: HackRegular!important;
+}
+
+code[class*=language-],
+pre[class*=language-] {
+    font-family: HackRegular!important;
+}
+
+h1 {
+    font-weight: 600;
+}
+
+h3 {
+    font-weight: 600;
+}
+
+h5 {
+    font-weight: 600;
 }
