--- a/.vuepress/public/assets/css/global.css
+++ b/.vuepress/public/assets/css/global.css
@@ -13,13 +13,13 @@ pre[class*=language-] {
 }
 
 h1 {
-    font-weight: 600;
+    font-weight: 600!important;
 }
 
 h3 {
-    font-weight: 600;
+    font-weight: 600!important;
 }
 
 h5 {
-    font-weight: 600;
+    font-weight: 600!important;
 }
